# Pang

./: .gitignore  CMakeLists.txt  Main.cpp  OpenGLPong.sln  OpenGLPong.vcxproj  OpenGLPong.vcxproj.filters  camera.cpp  camera.h  cereal_glm_serialization.h  custom_game_logic.cpp  custom_game_logic.h  editor.h  fragment_shader.glsl  freefly_camera.cpp  game.cpp  game.h  gl_debug.h  imgui.ini  input_handler.cpp  material.cpp  material.h  material_component.cpp  material_component.h  material_lookup_registry.cpp  material_lookup_registry.h  mesh.cpp  mesh.h  mesh_component.cpp  name.cpp  name.h  node.cpp  node.h  packages.config  q  renderer.cpp  renderer.h  scene_deserializer.cpp  scene_deserializer.h  scene_graph.cpp  scene_graph.h  (+20 more)
docs/: Doxyfile
docs/html/: annotated.html  camera_8h_source.html  classcamera-members.html  classcamera.html  classcustom__game__logic-members.html  classcustom__game__logic.html  classeditor-members.html  classeditor.html  classes.html  classfreefly__camera-members.html  classfreefly__camera.html  classgame-members.html  classgame.html  classinput__handler-members.html  classinput__handler.html  classmaterial-members.html  classmaterial.html  classmesh-members.html  classmesh.html  classrenderer-members.html  classrenderer.html  classscene__deserializer-members.html  classscene__deserializer.html  classscene__serializer-members.html  classscene__serializer.html  classshader-members.html  classshader.html  classshader__loader-members.html  classshader__loader.html  classtexture-members.html  classtexture.html  custom__game__logic_8h_source.html  dir_3c4c7c1a85608ccd561c026bec818e51.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b4b6fa3d22e8b27ff427bb2cea3b74c.html  dir_a31afd56823c6335224242a3eb4525db.html  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_e488ee1cea97fb16abdb5ccc78d2123b.html  doxygen_crawl.html  editor_8h_source.html  (+32 more)
docs/html/search/: all_0.js  all_1.js  all_4.js  all_7.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
docs/latex/: annotated.tex  camera_8h_source.tex  classcamera.eps  classcamera.tex  classcustom__game__logic.tex  classeditor.tex  classfreefly__camera.eps  classfreefly__camera.tex  classgame.tex  classinput__handler.tex  classmaterial.tex  classmesh.tex  classrenderer.tex  classscene__deserializer.tex  classscene__serializer.tex  classshader.tex  classshader__loader.tex  classtexture.tex  custom__game__logic_8h_source.tex  editor_8h_source.tex  files.tex  freefly__camera_8h_source.tex  game_8h_source.tex  gl__debug_8h_source.tex  hierarchy.tex  input__handler_8h_source.tex  material_8h_source.tex  material__component_8h_source.tex  mesh_8h_source.tex  mesh__component_8h_source.tex  name_8h_source.tex  refman.tex  renderer_8h_source.tex  scene__deserializer_8h_source.tex  scene__serializer_8h_source.tex  shader_8h_source.tex  shader__loader_8h_source.tex  structdeserialization__data.tex  structmaterial__component.tex  structmesh__component.tex  (+5 more)
src/: context_builder.cpp  context_builder.h  context_builder.ixx  custom_game_logic.cpp  custom_game_logic.h  game.cpp  game.h  game.ixx  gl_debug.h  glm_reflection.h  input_handler.cpp  input_handler.h  main.cpp  tiny_gltf_defines.cpp  world.h
src/components/: material_component.cpp  mesh_component.h  name.cpp  name.h  transform.cpp  transform.h
src/editor/: editor.cpp  editor.h  editor_element.h  file_menu.h  inspector.h  scene_hierarchy.h  transformation_gizmo.h
src/flecs_modules/freefly_camera/: freefly.cpp  freefly.h
src/flecs_modules/rendering/: rendering.cpp  rendering.h
src/flecs_modules/transformation/: transformation.h  transformation.ixx
src/modules/transformation/: transformation.cpp  transformation.h
src/render/: camera.cpp  camera.h  camera.ixx  freefly_camera.cpp  freefly_camera.h  freefly_camera.ixx  material.cpp  material.h  material.ixx  mesh.cpp  mesh.h  mesh.ixx  renderer.cpp  renderer.h  renderer.ixx  shader.cpp  shader.h  shader.ixx  texture.cpp  texture.h  texture.ixx
src/serialization/: scene_deserializer.cpp  scene_deserializer.h  scene_manager.cpp  scene_manager.h  scene_serializer.cpp  scene_serializer.h  serializable.h  serializer.cpp  serializer.h  serializer.ixx  shader_loader.cpp  shader_loader.h
src/serialization/serializers/: buffer_serializer.cpp  buffer_serializer.h  child_serializer.cpp  child_serializer.h  extension_serialization_functions.h  extension_serializer.h  gltf_core_node_serializer.cpp  gltf_core_node_serializer.h  image_serializer.h  material_serializer.cpp  material_serializer.h  mesh_serializer.cpp  mesh_serializer.h  node_extension_serializer.h  sampler_serializer.h  serializer.h  texture_serializer.cpp  texture_serializer.h
src/tests/: CMakeLists.txt  scene_io.cpp  serialization.cpp
src/utility/: transformations.h
tests/: CMakeLists.txt  serialization.cpp
